syntax = "proto3";

package users;

service AdminService {
  rpc FindAll(AdminEntitiesRequest) returns (AdminEntitiesResponse);
  rpc ViewDetail(AdminEntityViewDetailRequest) returns (AdminEntityResponse);
  rpc Update(UpdateAdminRequest) returns (AdminEntityResponse);
  rpc Delete(EmailBody) returns (EmptyBody);
  rpc Create(CreateAdminEntity) returns (AdminEntityResponse);
}

message EmptyBody {}

message EmailBody {
  string email = 1;
}

message CreateAdminEntity {
  string email = 1;
  string password = 2;
  string retypePassword = 3;
}

message UpdateAdminEntity {
  string email = 1;
  string password = 2;
  string fullname = 3;
  string address = 4;
  string phone = 5;
  string gender = 6;
  string profileImage = 7;
  int32 status = 8;
  int32 dob = 9;
}

message UpdateAdminRequest {
  string email = 1;
  UpdateAdminEntity payload = 2;
}

service CustomerService {
  rpc FindAll(CustomerEntitiesRequest) returns (CustomerEntitiesResponse);
  rpc ViewDetail(CustomerEntityViewDetailRequest) returns (CustomerEntityResponse);
}


message AdminEntityViewDetailRequest {
  string email = 1;
}

message CustomerEntityViewDetailRequest {
  string email = 1;
}

message AdminEntitiesRequest {
  string roleFilter = 1;
  string genderFilter = 2;
  string page = 3;
  string limit= 4;
  string sortBy = 5;
  string order = 6;
  string searchValue = 7;
}
message CustomerEntitiesRequest {}

message AdminEntityResponse {
  AdminEntity data = 1;
}

message AdminEntitiesResponse {
  repeated AdminEntity data = 1;
}

message CustomerEntityResponse {
  CustomerEntity data = 1;
}

message CustomerEntitiesResponse {
  repeated CustomerEntity data = 1;
}


message AdminEntity {
  string email = 1;
  string password = 2;
  string fullname = 3;
  string address = 4;
  string phone = 5;
  string gender = 6;
  int32 status = 7;
  string profileImage = 8;
  int32 dob = 9;
}

message CustomerEntity {
  string email = 1;
  string password = 2;
  string fullname = 3;
  string address = 4;
  string phone = 5;
  string gender = 6;
  string status = 7;
  string profileImage = 8;
  int32 dob = 9;
  repeated CampaignEntity campaigns = 10;
}


message CampaignEntity {
  int32 id = 1;
  string description = 2;
  int32 status = 3;
  int64 startDate = 4;
  int64 endDate = 5;
  string feedback = 6;
  CustomerEntity customer = 7;
}

service TrainerService {
  rpc FindAll(TrainerEntitiesRequest) returns (TrainerEntitiesResponse);
  rpc ViewDetail(TrainerEntityViewDetailRequest) returns (TrainerEntityResponse);
}


message TrainerEntityViewDetailRequest {
  string email = 1;
}

message TrainerEntityResponse {
  TrainerEntity data = 1;
}

message TrainerEntitiesResponse {
  repeated TrainerEntity data = 1;
}

message TrainerEntitiesRequest {}


message TrainerEntity {
  string email = 1;
  string password = 2;
  string fullname = 3;
  string address = 4;
  string phone = 5;
  string gender = 6;
  int32 status = 7;
  string profileImage = 8;
  int32 dob = 9;
  int32 yearOfExp = 10;
  int32 rating = 11;
  repeated PackageEntity packages = 12;
}

message PackageEntity {
  int32 id = 1;
  string exercisePlan = 2;
  string schedule = 3;
  float price = 4;
  int32 status = 5;
  string dietPlan = 6;
  TrainerEntity trainer = 7;
}
